--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database Configuration
-MONGODB_URI=mongodb://localhost:27017/flower-shop
+MONGO_URI=mongodb://localhost:27017/flower-shop
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key
