--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,17 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.ts",
-            "use": "@vercel/node"
+            "src": "api/index.js",
+            "use": "@vercel/node",
+            "config": {
+                "includeFiles": ["dist/**"]
+            }
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "POST",
-                "PUT",
-                "DELETE",
-                "PATCH",
-                "OPTIONS"
-            ]
+            "dest": "api/index.js"
         }
     ],
     "env": {
